Fix layout shift. Open first player on initial load

--- a/src/core/components/month-list/month-list.module.scss
+++ b/src/core/components/month-list/month-list.module.scss
@@ -6,12 +6,12 @@
 	margin: 0 4.5rem;
   height: auto;
   flex-direction: column;
-  margin: 3rem auto;
+  margin: 0 auto;
 
 	@media all and (max-width: 800px) {
 		flex-direction: column;
 		min-width: 8rem;
     gap: 2rem;
-    margin: 1rem auto;
+    margin: 5rem auto;
 	}
 }
